son değişikler yapıldı

--- a/Hakkimizda.html
+++ b/Hakkimizda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,27 @@
     <link rel="shortcut icon" href="img/yamaha.ico" type="image/x-icon">
     <title>YAMAHA</title>
 </head>
-<body>
+<body> 
     <img class="logoimage" src="img/yamaha-logo (1).svg" width="120px" alt="yamahalogo">
-        <header>
+    <header> <!--MENU-->
             <a class="header-title text-secondary pl-4" href="index.html">ANA SAYFA</a>
             <a class="header-title text-secondary pl-3" href="Motosiklet.html">MOTOSİKLET</a>
-            <a class="header-title text-secondary pl-3" href="Hakkimizda.html">HAKKIMIZDA</a>
-        </header>
-    <h2 class="text-center">HAKKIMIZDA</h2> <br><br>
+            <a class="header-title text-secondary pl-3" href="hakkimizda.html">HAKKIMIZDA</a>
+    </header>
+    <h2 class="hakkimizda">HAKKIMIZDA</h2>
+    <div class="card text-center">
+        <div class="card-header font-weight-bolder">
+          Misyonumuz
+        </div>
+        <div class="card-body">
+            <img class="hero" src="img/hero.jpeg" alt="hero">
+          <p class="card-text text-arial">Genichi Kawakami'nin 1955 yılında Yamaha Motor'u kurduğu günden bu yana TÜM müşterilerimize KANDO deneyimini yaşatma misyonuyla faaliyetlerimizi sürdürüyoruz. Bunu sadece ürünlerimiz ile sınırlı tutmuyoruz.</p>
+          <img src="img/kando.jpeg" alt="kando"> <br>
+          <p class="card-text text-arial">KANDO, Japoncada çok değerli ve kaliteli, yüksek performanslı bir şey ile karşılaştığımızda duyduğumuz kuvvetli tatmin ve heyecanı ifade eder. Yaşamınıza tat katan bu nefes kesici duygu, kalp atışlarımızı da hızlandırır. Tüm ürün ve hizmetlerimiz, işinden gerçekten keyif alan, size mümkün olan en iyi deneyimi sunmayı hedefleyen insanlar tarafından tasarlanır ve üretilir.
 
+            Daha hızlı YARIŞMAK, sürüş keyfini iliklerinize kadar HİSSETMEK ya da daha akıllıca HAREKET ETMEK mi istiyorsunuz? Size KANDO deneyimini yaşatacak Yamaha'ya kavuşmanızı, o Yamaha ile Kalp Atışlarınızı Hızlandırmayı, gözlerinizi kamaştırmayı istiyoruz.</p>
+          <a href="#" class="btn btn-danger">Bize Ulaşın</a>
+        </div>
+      </div>
 </body>
 </html>
