--- a/Motosiklet.html
+++ b/Motosiklet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/yamaha.ico" type="image/x-icon">
-    <title>Document</title>
+    <title>YAMAHA</title>
 </head>
 <body>
     <img class="logoimage" src="img/yamaha-logo (1).svg" width="120px" alt="yamahalogo">
     <header>
             <a class="header-title text-secondary pl-4" href="index.html">ANA SAYFA</a>
             <a class="header-title text-secondary pl-3" href="Motosiklet.html">MOTOSİKLET</a>
-            <a class="header-title text-secondary pl-3" href="Hakkımızda.html">HAKKIMIZDA</a>
+            <a class="header-title text-secondary pl-3" href="hakkimizda.html">HAKKIMIZDA</a>
     </header>
         <div class="container">
             <div class="row">
