--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <hr class="my-4">
                         <p>Bize ulaşabilmek, önerilerinizi sunmak, şikayetlerinizi iletmek ve bize katılmak için aşağıdaki butona tıklayın..</p>
                         <p class="lead">
-                          <a class="btn btn-primary btn-lg" href="Hakkımızda.html" role="button">Daha Fazlası</a>
+                          <a class="btn btn-danger btn-lg" href="Hakkımızda.html" role="button">Daha Fazlası</a>
                         </p>
                       </div>
                 </div>
